<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@android:color/transparent"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/save"
        android:icon="@android:color/transparent"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/close"
        android:icon="@android:color/transparent"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_default_policy"
        android:orderInCategory="100"
        android:title="@string/view_default_policy"
        android:icon="@android:color/transparent"
        app:showAsAction="never"/>
</menu>