<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/label_name" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_name"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/label_password" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_password_generate"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_description"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_description"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_policy_override"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/colorPrimary" />

        <include layout="@layout/edit_policy" />

    </LinearLayout>

</LinearLayout>